# scarf

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.md  test.sv
cirkit/: Cargo.toml
cirkit-lexer/: Cargo.toml
cirkit-lexer/src/: lib.rs  tokens.rs
cirkit-parser/: Cargo.toml
cirkit-parser/src/: lib.rs
cirkit-parser/src/declarations/: task_declarations.rs
cirkit-parser/src/declarations/declaration_data_types/: net_and_variable_types.rs
cirkit-parser/src/declarations/declaration_types/: type_declarations.rs
cirkit-parser/src/expressions/: expressions.rs  numbers.rs  primaries.rs
cirkit-parser/src/general/: mod.rs
cirkit-parser/src/lexer/: callbacks.rs  keywords.rs  mod.rs  postprocess.rs  tokens.rs
cirkit-parser/src/parser/: mod.rs  utils.rs
cirkit-parser/src/parser/declarations/: declaration_assignments.rs  declaration_lists.rs  declaration_ranges.rs  mod.rs  task_declarations.rs
cirkit-parser/src/parser/expressions/: expressions.rs  numbers.rs  primaries.rs  subroutine_calls.rs
cirkit-parser/src/parser/general/: attributes.rs  identifiers.rs
cirkit-parser/src/parser/source_text/: checker_items.rs  class_items.rs  configuration_source_text.rs  interface_items.rs  mod.rs  module_items.rs  module_parameters_and_ports.rs  package_items.rs  program_items.rs  system_verilog_source_text.rs
cirkit-parser/src/parser/udp_declaration_and_instantiation/: udp_declaration.rs
cirkit-parser/src/source_text/: class_items.rs  configuration_source_text.rs  package_items.rs  system_verilog_source_text.rs
cirkit-syntax/: Cargo.toml
cirkit-syntax/src/: keywords.rs  lib.rs  metadata.rs
cirkit-syntax/src/declarations/: declaration_ranges.rs  task_declarations.rs
cirkit-syntax/src/declarations/declaration_data_types/: mod.rs  net_and_variable_types.rs  strengths.rs
cirkit-syntax/src/declarations/declaration_types/: module_parameter_declarations.rs  port_declarations.rs  type_declarations.rs
cirkit-syntax/src/expressions/: mod.rs  numbers.rs  primaries.rs
cirkit-syntax/src/general/: attributes.rs  identifiers.rs
cirkit-syntax/src/source_text/: interface_items.rs  module_parameters_and_ports.rs  system_verilog_source_text.rs
cirkit/src/: main.rs
oxide/: Cargo.toml
scarf/: Cargo.toml
scarf-parser/: Cargo.toml
scarf-parser/examples/: iter_tree.rs
scarf-parser/src/: error.rs  lib.rs  report.rs  test.rs
scarf-parser/src/lexer/: callbacks.rs  keywords.rs  merge.rs  mod.rs  postprocess.rs  tokens.rs
scarf-parser/src/parser/: combinators.rs  error.rs  errors.rs  mod.rs  pratt.rs  repeat.rs  spanned_token.rs  utils.rs
scarf-parser/src/parser/behavioral_statements/: assertion_statements.rs  case_statements.rs  clocking_block.rs  conditional_statements.rs  continuous_assignment_and_net_alias_statements.rs  looping_statements.rs  mod.rs  parallel_and_sequential_blocks.rs  patterns.rs  procedural_blocks_and_assignments.rs  randsequence.rs  statements.rs  subroutine_call_statements.rs  timing_control_statements.rs
scarf-parser/src/parser/declarations/: assertion_declarations.rs  block_item_declarations.rs  covergroup_declarations.rs  declaration_assignments.rs  declaration_lists.rs  declaration_ranges.rs  function_declarations.rs  interface_declarations.rs  let_declarations.rs  mod.rs  task_declarations.rs
scarf-parser/src/parser/expressions/: concatenations.rs  expression_left_side_values.rs  expressions.rs  mod.rs  numbers.rs  operators.rs  primaries.rs  strings.rs  subroutine_calls.rs
scarf-parser/src/parser/general/: attributes.rs  identifiers.rs
scarf-parser/src/preprocessor/: cache.rs  conditional_compilation.rs  configs.rs  define.rs  error.rs  implicit_nettype.rs  include.rs  keywords.rs  line.rs  mod.rs  state.rs  text_macro.rs  timescale.rs  unconnected.rs
scarf-python/: Cargo.toml  pyproject.toml  test.v
scarf-python/docs/: conf.py  index.rst  parsing.rst  reports.rst  requirements.txt
scarf-python/docs/api/: classes.rst  functions.rst
scarf-python/docs/drawio/: parsing.drawio
scarf-python/src/: define.rs  error.rs  lib.rs  node.rs  report.rs  token.rs
scarf-syntax/: Cargo.toml  build.rs  build_old.rs
scarf-syntax/src/: iter.rs  lib.rs  metadata.rs
scarf-syntax/src/behavioral_statements/: assertion_statements.rs  case_statements.rs  clocking_block.rs  conditional_statements.rs  continuous_assignment_and_net_alias_statements.rs  looping_statements.rs  mod.rs  parallel_and_sequential_blocks.rs  patterns.rs  procedural_blocks_and_assignments.rs  randsequence.rs  statements.rs  subroutine_call_statements.rs  timing_control_statements.rs
scarf-syntax/src/compiler_directives/: conditional_compilation.rs  define.rs  include.rs  line.rs  mod.rs  text_macro.rs
scarf-syntax/src/declarations/: assertion_declarations.rs  block_item_declarations.rs  covergroup_declarations.rs  declaration_assignments.rs  declaration_lists.rs  declaration_ranges.rs  function_declarations.rs  interface_declarations.rs  let_declarations.rs  mod.rs  task_declarations.rs
scarf-syntax/src/expressions/: concatenations.rs  expression_left_side_values.rs  expressions.rs  mod.rs  numbers.rs  operators.rs  primaries.rs  strings.rs  subroutine_calls.rs
scarf-syntax/src/general/: attributes.rs  identifiers.rs  mod.rs
scarf-syntax/src/instantiations/: generated_instantiation.rs  mod.rs
scarf-syntax/src/primitive_instances/: mod.rs  primitive_gate_and_switch_types.rs  primitive_instantiation_and_instances.rs  primitive_strengths.rs  primitive_terminals.rs
scarf-syntax/src/source_text/: checker_items.rs  class_items.rs  configuration_source_text.rs  constraints.rs  interface_items.rs  mod.rs  module_items.rs  module_parameters_and_ports.rs  package_items.rs  program_items.rs  system_verilog_source_text.rs
scarf-syntax/src/specify_section/: mod.rs  specify_block_declaration.rs  specify_block_terminals.rs  specify_path_declarations.rs  specify_path_delays.rs
scarf-syntax/src/udp_declaration_and_instantiation/: mod.rs  udp_body.rs  udp_declaration.rs  udp_instantiation.rs  udp_ports.rs
scarf/src/: cli.rs  main.rs
scarf/src/constructs/: mod.rs
(+121 files in other folders)
