[package]
name = "cirkit-lexer"
description = "A helper crate of cirkit for lexing a SystemVerilog source file"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/Aidan-McNay/cirkit"
readme = "../README.md"
keywords = ["systemverilog"]
categories = ["development-tools", "parsing"]

[dependencies]
logos = "0.15.0"
