[package]
name = "cirkit-syntax"
description = "A helper crate of cirkit for expressing a SystemVerilog concrete syntax tree"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/Aidan-McNay/cirkit"
readme = "../README.md"
keywords = ["systemverilog"]
categories = ["data-structures"]

[dependencies]
