[package]
name = "scarf-parser"
description = "A helper crate of scarf for parsing a SystemVerilog source file"
version = "0.1.0"
authors = ["Aidan McNay <aidanmcnay@gmail.com>"]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/Aidan-McNay/scarf"
readme = "../README.md"
keywords = ["systemverilog"]
categories = ["development-tools", "parsing"]

[dependencies]
ariadne = { version = "0.5.1", features = ["auto-color"] }
chumsky = { version = "0.10.1", features = ["pratt"] }
scarf-syntax = { version = "0.1.0", path = "../scarf-syntax" }
logos = "0.15.0"
regex = "1.11.1"
