[package]
name = "scarf-parser"
description = "A helper crate of scarf for parsing a SystemVerilog source file"
version = "0.1.0"
authors = ["Aidan McNay <aidanmcnay@gmail.com>"]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/Aidan-McNay/scarf"
readme = "../README.md"
keywords = ["systemverilog"]
categories = ["development-tools", "parsing"]

[dependencies]
ariadne = { version = "0.5.1", features = ["auto-color"] }
scarf-syntax = { version = "0.1.0", path = "../scarf-syntax" }
logos = "0.16.0"
winnow = "0.7.13"
elsa = "1.11.2"
