[package]
name = "scarf-python"
description = "Python bindings for the Scarf SystemVerilog tools"
version = "0.1.0"
authors = ["Aidan McNay <aidanmcnay@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Aidan-McNay/scarf"
readme = "../README.md"
keywords = ["systemverilog"]

[lib]
name = "scarf_python"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
scarf-parser = { version = "0.1", path = "../scarf-parser" }
scarf-syntax = { version = "0.2", path = "../scarf-syntax" }

[dependencies.pyo3]
version = "0.29.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
