[package]
name = "scarf-syntax"
description = "A helper crate of scarf for expressing a SystemVerilog concrete syntax tree"
version = "0.1.0"
authors = ["Aidan McNay <aidanmcnay@gmail.com>"]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/Aidan-McNay/scarf"
readme = "../README.md"
keywords = ["systemverilog"]
categories = ["data-structures"]

[dependencies]

[build-dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
walkdir = "2.3"
proc-macro2 = "1.0"

[features]
keep_extras = []
