[package]
name = "scarf"
description = "A suite of tools for interacting with (System)Verilog hardware designs"
version = "0.2.2"
authors = ["Aidan McNay <aidanmcnay@gmail.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/Aidan-McNay/scarf"
readme = "../README.md"
keywords = ["systemverilog"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
scarf-parser = { version = "0.2.2", path = "../scarf-parser" }
scarf-syntax = { version = "0.2", path = "../scarf-syntax" }
clap = { version = "4.5.39", features = ["derive"] }
